--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dotenv": "^16.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0"
   },
   "scripts": {
