--- a/react-todo-app/package.json
+++ b/react-todo-app/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "airtable": "^0.11.6",
+    "npm": "^9.4.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
+    "react-router": "^6.8.0",
+    "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
