--- a/react-todo-app/package.json
+++ b/react-todo-app/package.json
@@ -7,12 +7,13 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "airtable": "^0.11.6",
+    "antd": "^5.2.3",
     "axios": "^1.3.4",
     "npm": "^9.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "^5.0.1",
