--- a/react-todo-app/package.json
+++ b/react-todo-app/package.json
@@ -14,9 +14,10 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.8.0",
+    "react-modal": "^3.16.1",
     "react-router": "^6.8.0",
     "react-router-dom": "^6.8.1",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
