--- a/react-todo-app/package.json
+++ b/react-todo-app/package.json
@@ -9,6 +9,7 @@
     "airtable": "^0.11.6",
     "antd": "^5.2.3",
     "axios": "^1.3.4",
+    "framer-motion": "^10.2.4",
     "npm": "^9.4.2",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
