--- a/react-todo-app/package.json
+++ b/react-todo-app/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/colors": "^7.0.0",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^13.5.0",
     "airtable": "^0.11.6",
-    "antd": "^5.2.3",
+    "antd": "^5.3.2",
     "axios": "^1.3.4",
     "framer-motion": "^10.2.4",
     "npm": "^9.4.2",
